# ob1-bazel

./: Dockerfile  README.md  WORKSPACE
.github/workflows/: test_linux.yml
bazel/: deps.bzl  setup.bzl
libs/: glm.BUILD.bazel  graphqlparser.BUILD.bazel  sqlite3.BUILD.bazel
tests/: BUILD.bazel
tests/src/graphql/: test.cc
tests/src/skia/: test.cc
tests/src/sqlite/: test.cc
tools/: skia_deps_linux.sh
